--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,3 +1,49 @@
 {
-  "root": true
+  "root": true,
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "jest": true,
+    "node": false
+  },
+  "extends": [
+    "plugin:react/recommended",
+    "airbnb",
+    "plugin:prettier/recommended"
+  ],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": [
+    "react"
+  ],
+  "ignorePatterns": [
+    "index.js"
+  ],
+  "rules": {
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto",
+        "singleQuote": true
+      }
+    ],
+    "max-len": [
+      "warn",
+      120
+    ],
+    "no-unused-vars": "warn",
+    "react/prop-types": 0,
+    "jsx-a11y/label-has-associated-control": [
+      "warn"
+    ]
+  }
 }
