--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "mongodb": "^4.4.1",
+    "uuid": "^8.3.2"
   }
 }
