feat: front end routing and firebase

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -25,6 +25,8 @@
     "index.js"
   ],
   "rules": {
+    "react/jsx-props-no-spreading": "off",
+    "react/function-component-definition": "off",
     "quotes": [
       "error",
       "single"
