--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -25,6 +25,7 @@
     "index.js"
   ],
   "rules": {
+    "no-underscore-dangle":  ["error", { "allow": ["_id"] }],
     "react/jsx-props-no-spreading": "off",
     "react/function-component-definition": "off",
     "quotes": [
